--- a/15 - LocalStorage/style.css
+++ b/15 - LocalStorage/style.css
@@ -70,11 +70,11 @@ h2 {
   content: "🌮";
 }
 
-.add-items {
+.add-items, .btns  {
   margin-top: 20px;
 }
 
-.add-items input {
+.add-items input, .btns button {
   padding: 10px;
   outline: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
