--- a/24 - Sticky Nav/style-START.css
+++ b/24 - Sticky Nav/style-START.css
@@ -69,7 +69,7 @@ li.logo {
   max-width: 0;
   overflow: hidden;
   background: white;
-  transition: all .5s;
+  transition: all 2s;
   font-weight: 600;
   font-size: 30px;
 }
@@ -85,4 +85,18 @@ nav a {
   color: white;
   transition: all 0.2s;
   text-transform: uppercase;
+}
+
+/* fixed-nav effect */
+.fixed-nav nav {
+  position: fixed;
+  box-shadow: 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.fixed-nav li.logo {
+  max-width: 300px;
+}
+
+.fixed-nav .site-wrap {
+  transform: scale(1);
 }
