29 - Countdown Timer practice done, and add stop and continus function

--- a/29 - Countdown Timer/style.css
+++ b/29 - Countdown Timer/style.css
@@ -80,3 +80,14 @@ body {
   font-size: 4rem;
   color: white;
 }
+
+.timer__functions {
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.timer__functions button{
+  padding: 10px;
+  font-weight: 600;
+}
